--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
+
 <!-- saved from url=(0057)https://games.samsclass.info/tmp/141/bingame1-winners.htm -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body>Tue Mar 5 08:36:42 PST 2055 <b><big>test2</big></b><br> 
-Tue Mar 5 10:14:56 PST 2019
-<b><big>test3</big></b><br>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body>Tue Mar  5 10:36:00 PST 2019
+<b><big>testtest</big></b><br>
 </body></html>
