--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 
 <!-- saved from url=(0057)https://games.samsclass.info/tmp/141/bingame1-winners.htm -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body>Tue Mar  5 10:36:00 PST 2019
-<b><big><marquee behavior="alternate">testtesttest</marquee></big></b><br>
+<b><big>Kazam!</big></b><br>
 </body></html>
